test/parsing/vass/wrong-escapes-4.good
wrong-escapes-4.chpl:2: error: end-of-file in string literal
